@@ -77,9 +77,9 @@ exportMethods(plotClustersWorkflow)
 exportMethods(plotCoClustering)
 exportMethods(plotContrastHeatmap)
 exportMethods(plotDendrogram)
-exportMethods(plotDimReduce)
 exportMethods(plotFeatureBoxplot)
 exportMethods(plotHeatmap)
+exportMethods(plotReducedDim)
 exportMethods(primaryCluster)
 exportMethods(primaryClusterIndex)
 exportMethods(primaryClusterNamed)
